# HPCLab

./: README.md
lab1/: 1-s  1-s.c  2-s  2-s.c  3-s  3-s.c  4-s  4-s.c  makefile
lab2/: 1-s  1-s.c  makefile
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
word/: 2110551202 甘劲博 上机实验 1.docx  2110551202 甘劲博 上机实验 2.docx  2110551202 甘劲博 上机实验 3.docx  2110551202 甘劲博 上机实验 4.docx
